// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Examples renders Button.Split.Example.tsx correctly 1`] = `
<div
  className="ms-BasicButtonsTwoUp twoup-112"
>
  <div>
    <label
      className="ms-Label root-89"
    >
      Standard
    </label>
    <div
      aria-describedby={undefined}
      aria-disabled={undefined}
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={undefined}
      aria-labelledby={undefined}
      aria-pressed={undefined}
      aria-roledescription="split button"
      checked={undefined}
      className="css-125"
      data-automation-id="test"
      data-is-focusable={true}
      data-ktp-target={undefined}
      disabled={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "height": "35px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          aria-pressed={undefined}
          aria-roledescription="split button"
          checked={undefined}
          className="ms-Button ms-Button--default root-119"
          data-automation-id="test"
          data-is-focusable={false}
          disabled={undefined}
          onClick={undefined}
          style={
            Object {
              "height": "35px",
            }
          }
          tabIndex={-1}
          type="button"
        >
          <div
            className="ms-Button-flexContainer flexContainer-102"
          >
            <div
              className="ms-Button-textContainer textContainer-103"
            >
              <div
                className="ms-Button-label label-120"
                id="id__0"
              >
                Create account
              </div>
            </div>
          </div>
        </button>
        <button
          aria-describedby={undefined}
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="See 2 sample options"
          aria-labelledby={undefined}
          aria-pressed={undefined}
          checked={undefined}
          className="ms-Button root-150"
          data-is-focusable={false}
          data-ktp-execute-target={undefined}
          disabled={undefined}
          onClick={[Function]}
          onMouseDown={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="ms-Button-flexContainer flexContainer-102"
          >
            <i
              aria-hidden={true}
              className="ms-Button-icon icon-134"
              data-icon-name="ChevronDown"
              role="presentation"
            >
              
            </i>
          </div>
        </button>
        <span
          className="css-149"
        />
      </span>
    </div>
  </div>
  <div>
    <label
      className="ms-Label root-89"
    >
      Primary
    </label>
    <div
      aria-describedby={undefined}
      aria-disabled={undefined}
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={undefined}
      aria-labelledby={undefined}
      aria-pressed={undefined}
      aria-roledescription="split button"
      checked={undefined}
      className="css-125"
      data-automation-id="test"
      data-is-focusable={true}
      data-ktp-target={undefined}
      disabled={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "height": "35px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          aria-pressed={undefined}
          aria-roledescription="split button"
          checked={undefined}
          className="ms-Button ms-Button--primary root-144"
          data-automation-id="test"
          data-is-focusable={false}
          disabled={undefined}
          onClick={undefined}
          style={
            Object {
              "height": "35px",
            }
          }
          tabIndex={-1}
          type="button"
        >
          <div
            className="ms-Button-flexContainer flexContainer-102"
          >
            <div
              className="ms-Button-textContainer textContainer-103"
            >
              <div
                className="ms-Button-label label-120"
                id="id__6"
              >
                Create account
              </div>
            </div>
          </div>
        </button>
        <button
          aria-describedby={undefined}
          aria-expanded={false}
          aria-haspopup={true}
          aria-label={undefined}
          aria-labelledby={undefined}
          aria-pressed={undefined}
          checked={undefined}
          className="ms-Button root-154"
          data-is-focusable={false}
          data-ktp-execute-target={undefined}
          disabled={undefined}
          onClick={[Function]}
          onMouseDown={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="ms-Button-flexContainer flexContainer-102"
          >
            <i
              aria-hidden={true}
              className="ms-Button-icon icon-156"
              data-icon-name="ChevronDown"
              role="presentation"
            >
              
            </i>
          </div>
        </button>
        <span
          className="css-153"
        />
      </span>
    </div>
  </div>
  <div>
    <label
      className="ms-Label root-89"
    >
      Primary Action Disabled
    </label>
    <div
      aria-describedby={undefined}
      aria-disabled={undefined}
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={undefined}
      aria-labelledby={undefined}
      aria-pressed={undefined}
      aria-roledescription="split button"
      checked={undefined}
      className="css-125"
      data-automation-id="test"
      data-is-focusable={true}
      data-ktp-target={undefined}
      disabled={true}
      onClick={undefined}
      onKeyDown={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "height": "35px",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          aria-pressed={undefined}
          aria-roledescription="split button"
          checked={undefined}
          className="ms-Button ms-Button--primary is-disabled root-157"
          data-automation-id="test"
          data-is-focusable={false}
          disabled={true}
          onClick={undefined}
          style={
            Object {
              "height": "35px",
            }
          }
          tabIndex={-1}
          type="button"
        >
          <div
            className="ms-Button-flexContainer flexContainer-102"
          >
            <div
              className="ms-Button-textContainer textContainer-103"
            >
              <div
                className="ms-Button-label label-120"
                id="id__12"
              >
                Create account
              </div>
            </div>
          </div>
        </button>
        <button
          aria-describedby={undefined}
          aria-expanded={false}
          aria-haspopup={true}
          aria-label={undefined}
          aria-labelledby={undefined}
          aria-pressed={undefined}
          checked={undefined}
          className="ms-Button root-154"
          data-is-focusable={false}
          data-ktp-execute-target={undefined}
          disabled={undefined}
          onClick={[Function]}
          onMouseDown={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="ms-Button-flexContainer flexContainer-102"
          >
            <i
              aria-hidden={true}
              className="ms-Button-icon icon-156"
              data-icon-name="ChevronDown"
              role="presentation"
            >
              
            </i>
          </div>
        </button>
        <span
          className="css-153"
        />
      </span>
    </div>
  </div>
  <div>
    <label
      className="ms-Label root-89"
    >
      Button Disabled
    </label>
    <div
      aria-describedby={undefined}
      aria-disabled={true}
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={undefined}
      aria-labelledby={undefined}
      aria-pressed={undefined}
      aria-roledescription="split button"
      checked={undefined}
      className="css-161"
      data-automation-id="test"
      data-is-focusable={true}
      data-ktp-target={undefined}
      disabled={true}
      onClick={undefined}
      onKeyDown={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "height": "35px",
        }
      }
      tabIndex={undefined}
      type="button"
    >
      <span
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          aria-pressed={undefined}
          aria-roledescription="split button"
          checked={undefined}
          className="ms-Button ms-Button--primary is-disabled root-157"
          data-automation-id="test"
          data-is-focusable={false}
          disabled={true}
          onClick={undefined}
          style={
            Object {
              "height": "35px",
            }
          }
          tabIndex={-1}
          type="button"
        >
          <div
            className="ms-Button-flexContainer flexContainer-102"
          >
            <div
              className="ms-Button-textContainer textContainer-103"
            >
              <div
                className="ms-Button-label label-120"
                id="id__18"
              >
                Create account
              </div>
            </div>
          </div>
        </button>
        <button
          aria-describedby={undefined}
          aria-expanded={false}
          aria-haspopup={true}
          aria-label={undefined}
          aria-labelledby={undefined}
          aria-pressed={undefined}
          checked={undefined}
          className="ms-Button is-disabled root-163"
          data-is-focusable={false}
          data-ktp-execute-target={undefined}
          disabled={true}
          onClick={[Function]}
          onMouseDown={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="ms-Button-flexContainer flexContainer-102"
          >
            <i
              aria-hidden={true}
              className="ms-Button-icon icon-166"
              data-icon-name="ChevronDown"
              role="presentation"
            >
              
            </i>
          </div>
        </button>
        <span
          className="css-153"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Component Examples renders Button.Split.Example.tsx correctly 2`] = `
<div>
  <label
    className="ms-Label root-89"
  >
    Split button with icon and custom styles
  </label>
  <div
    aria-describedby={undefined}
    aria-disabled={undefined}
    aria-expanded={false}
    aria-haspopup={true}
    aria-label={undefined}
    aria-labelledby={undefined}
    aria-pressed={undefined}
    aria-roledescription="split button"
    checked={undefined}
    className="css-168"
    data-automation-id="test"
    data-is-focusable={true}
    data-ktp-target={undefined}
    disabled={undefined}
    onClick={[Function]}
    onKeyDown={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        aria-describedby={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        aria-pressed={undefined}
        aria-roledescription="split button"
        checked={undefined}
        className="ms-Button ms-Button--icon root-145"
        data-automation-id="test"
        data-is-focusable={false}
        disabled={undefined}
        onClick={undefined}
        tabIndex={-1}
        type="button"
      >
        <div
          className="ms-Button-flexContainer flexContainer-102"
        >
          <i
            aria-hidden={true}
            className="ms-Button-icon icon-109"
            data-icon-name="Upload"
            role="presentation"
          >
            
          </i>
          <div
            className="ms-Button-textContainer textContainer-103"
          />
        </div>
      </button>
      <button
        aria-describedby={undefined}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label={undefined}
        aria-labelledby={undefined}
        aria-pressed={undefined}
        checked={undefined}
        className="ms-Button root-171"
        data-is-focusable={false}
        data-ktp-execute-target={undefined}
        disabled={undefined}
        onClick={[Function]}
        onMouseDown={[Function]}
        tabIndex={-1}
        type="button"
      >
        <div
          className="ms-Button-flexContainer flexContainer-102"
        >
          <i
            aria-hidden={true}
            className="ms-Button-icon icon-173"
            data-icon-name="ChevronDown"
            role="presentation"
          >
            
          </i>
        </div>
      </button>
      <span
        className="css-170"
      />
    </span>
  </div>
</div>
`;
